Fix Bug 283887 - timeout on unread status doesn't work properly (restore feature as kmail1)

FIXED-IN: 4.7.3
BUG: 283887
BUG: 279019